--- a/style.css
+++ b/style.css
@@ -79,6 +79,20 @@ body {
 .check-mark.checked img {
   visibility: visible;
 }
+.btn {
+  background-color: rgba(0, 0, 0, 0.4);
+  border: none;
+  color: white;
+  width: 30px;
+  height: 30px;
+  margin-top: 20px;
+  margin-right: 10px;
+  cursor: pointer;
+  border-radius: 50%;
+}
+.btn:hover {
+  background: linear-gradient(135deg, #55ddff 0%, #c058f3 100%);
+}
 .todo-text.checked {
   text-decoration: line-through;
   color: hsl(233, 14%, 35%);
@@ -91,7 +105,7 @@ body {
 .new-todo-input form {
   flex-grow: 1;
 }
-.new-todo-input input {
+.new-todo-input button {
   width: 100%;
   padding: 10px 0;
   background-color: transparent;
@@ -100,7 +114,7 @@ body {
   color: hsl(234, 39%, 85%);
   font-size: 18px;
 }
-.new-todo-input input ::placeholder {
+.new-todo-input button::placeholder {
   color: hsl(233, 14%, 35%);
 }
 .todo-item {
@@ -156,4 +170,120 @@ body {
 .items-clear {
   cursor: pointer;
   text-align: end;
+}
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  padding-top: 100px; /* Location of the box */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0, 0, 0); /* Fallback color */
+  background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
+}
+
+/* Modal Content */
+.modal-content {
+  background-color: #fefefe;
+  margin: auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 70%;
+}
+
+/* The Close Button */
+.close {
+  color: #aaaaaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: #000;
+  text-decoration: none;
+  cursor: pointer;
+}
+.modal-container {
+  justify-content: center;
+  display: flex;
+  gap: 50px;
+}
+
+#posts {
+  width: 400px;
+}
+
+i {
+  cursor: pointer;
+}
+#posts div {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin: 30px;
+}
+
+.options {
+  display: flex;
+  gap: 25px;
+}
+
+#msg {
+  color: red;
+}
+#form-modal {
+  height: 400px;
+}
+#form-modal textarea {
+  height: 100px;
+}
+.left button {
+  width: 100px;
+  height: 40px;
+  border: 2px solid #000;
+  color: rgb(0, 0, 0);
+  background: linear-gradient(135deg, #1ce21c 0%, #5dce59 100%);
+  cursor: pointer;
+}
+.left button:hover {
+  box-shadow: 3px 3px 4px #000;
+}
+.left .btn-cancel {
+  width: 100px;
+  height: 40px;
+  border: 2px solid #000;
+  color: rgb(255, 247, 247);
+  background: linear-gradient(135deg, #f00f1a 0%, #f53d3d 100%);
+  cursor: pointer;
+  margin-left: 20px;
+}
+#form-modal label {
+  float: left;
+}
+.fa-edit:hover {
+  font-size: 1.3em;
+  /* transition: 1s ease-out; */
+  color: rgb(86, 219, 86);
+}
+.fa-trash-alt:hover {
+  font-size: 1.3em;
+  /* transition: 1s ease-out; */
+  color: rgb(255, 7, 7);
+}
+.form-control {
+  height: 30px;
+  border: 2px solid #000;
+  border-radius: 5px;
+}
+.left textarea {
+  display: flex;
+  align-items: left;
+  justify-content: center;
+  border: 2px solid #000;
+  border-radius: 5px;
 }
