Editing the plan active part

--- a/style.css
+++ b/style.css
@@ -132,6 +132,7 @@ body {
   transition: all 0.25s ease;
   transition-property: box-shadow, transform, border-color;
   cursor: pointer;
+  position: relative;
 }
 .todo-item:hover {
   transform: translateY(-2px);
@@ -349,12 +350,14 @@ body {
   color: rgb(238, 235, 235);
   display: block;
   margin-top: 10px;
-  position: fixed;
-  right: 30%;
 }
 .statu-active {
   color: #46b823;
+  position: absolute;
+  right: 10px;
 }
 .statu-complated {
   color: #f53033;
+  position: absolute;
+  right: 10px;
 }
