--- a/style.css
+++ b/style.css
@@ -188,7 +188,10 @@ body {
   background-color: rgb(0, 0, 0);
   background-color: rgba(0, 0, 0, 0.4);
 }
-
+/* scroll u gizler */
+::-webkit-scrollbar {
+  display: none;
+}
 /* Modal Content */
 .modal-content {
   background-color: #fefefe;
@@ -363,4 +366,9 @@ body {
 }
 .gizle {
   display: none;
+}
+.message {
+  display: none;
+  text-align: left;
+  color: #3aa319;
 }
