--- a/style.css
+++ b/style.css
@@ -176,15 +176,17 @@ body {
   text-align: end;
 }
 .modal {
+  /* display: none;
+  position: fixed; */
   display: none;
-  position: fixed;
+  position: absolute;
   z-index: 1;
-  padding-top: 100px;
+  /* padding-top: 100px; */
   left: 0;
-  top: 0;
+  top: 0px;
   width: 100%;
   height: 100%;
-  overflow: auto;
+  /* overflow: auto; */
   background-color: rgb(0, 0, 0);
   background-color: rgba(0, 0, 0, 0.4);
 }
@@ -199,8 +201,9 @@ body {
   padding: 20px;
   border: 1px solid #888;
   width: 40%;
-  margin-bottom: 100px;
+  /* margin-bottom: 100px; */
   text-align: center;
+  justify-content: center;
 }
 
 /* The Close Button */
@@ -232,7 +235,7 @@ body {
   height: 400px;
 }
 #form-modal textarea {
-  height: 100px;
+  height: 150px;
 }
 .left button {
   width: 100%;
@@ -355,12 +358,12 @@ body {
   margin-top: 10px;
 }
 .statu-active {
-  color: #46b823;
+  color: #e7eee5;
   position: absolute;
   right: 10px;
 }
 .statu-complated {
-  color: #f53033;
+  color: #c058f3;
   position: absolute;
   right: 10px;
 }
@@ -370,5 +373,5 @@ body {
 .message {
   display: none;
   text-align: left;
-  color: #3aa319;
+  color: #0daf0a;
 }
